--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
@@ -25,6 +26,7 @@
   <footer>
     Made with ❤️ in Indonesia.
   </footer>
+  <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
